Finalized FoodItem and MealItem classes

--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,23 @@
             <artifactId>json</artifactId>
             <version>20250107</version>
         </dependency>
+
+        <!-- <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-base</artifactId>
+            <version>25-ea+17</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>25-ea+17</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.kordamp.bootstrapfx</groupId>
+            <artifactId>bootstrapfx-core</artifactId>
+            <version>0.4.0</version>
+        </dependency> -->
     </dependencies>
 </project>
