--- a/pom.xml
+++ b/pom.xml
@@ -50,5 +50,11 @@
             <artifactId>javafx-graphics</artifactId>
             <version>25-ea+17</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>java-dotenv</artifactId>
+            <version>5.2.2</version>
+        </dependency>
     </dependencies>
 </project>
